--- a/FoodApp/app/build.gradle
+++ b/FoodApp/app/build.gradle
@@ -9,7 +9,6 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -23,5 +22,15 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.3.1'
-
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile('com.squareup.retrofit2:converter-simplexml:2.2.0') {
+        exclude module: 'xpp3'
+        exclude module: 'stax-api'
+        exclude module: 'stax'
+    }
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.j256.ormlite:ormlite-android:5.0'
 }
