--- a/FoodApp/app/build.gradle
+++ b/FoodApp/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.j256.ormlite:ormlite-android:5.0'
+    compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
 }
