--- a/FoodApp/app/build.gradle
+++ b/FoodApp/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile('com.squareup.retrofit2:converter-simplexml:2.2.0') {
         exclude module: 'xpp3'
